<resources>
    <string name="app_name">GuoEr</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="nav_call">Call</string>
    <string name="nav_search">Search</string>
    <string name="nav_camera">Camera</string>
    <string name="profile_name">Nova</string>
    <string name="nav_mail">nova@163.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_des">item des</string>
    <string name="name">Name:</string>
    <string name="added_item_desc_hint">Please input word to add</string>
    <string name="Cancel">Cancel</string>
    <string name="Sure">Sure</string>
</resources>
