<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/settings"
          android:icon="@android:drawable/ic_menu_set_as"
          android:orderInCategory="100"
          android:title="@string/settings"
          app:showAsAction="never"/>

    <item android:id="@+id/backup"
          android:icon="@android:drawable/ic_menu_add"
          android:orderInCategory="80"
          android:title="@string/add"
          app:showAsAction="never"/>

    <item android:id="@+id/delete"
          android:icon="@android:drawable/ic_menu_delete"
          android:orderInCategory="90"
          android:title="@string/delete"
          app:showAsAction="never"/>
</menu>