<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/dialog_background"
             android:padding="@dimen/dialog_padding">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView style="@style/style_dialog_text" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/name"/>
            <EditText style="@style/style_dialog_text" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:hint="@string/added_item_desc_hint"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_content_view" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/dialog_message" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <!--<include layout="@layout/recycler_view" android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button android:id="@+id/dialog_cancel" style="@style/style_dialog_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Cancel"/>
            <View android:layout_width="0dp" android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@color/dialog_pop_divider"/>

            <Button android:id="@+id/dialog_sure" style="@style/style_dialog_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Sure"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>